# untell

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: free-ceiling-measured.md  free-ceiling-report.md  free-detector-probes.md  humanizer-comparison.md  index.html  robots.txt  sitemap.xml  why-best-open-repo.md
eval/: __init__.py  baselines.py  benchmark.py  ceiling.py  compare_humanizers.py  datasets.py  eval_policy.py  prove.py  report.py
examples/: browser_sites.example.json
humanize/: SKILL.md  __init__.py  browser_check.py  mcp_server.py
humanize/detectors/: __init__.py  base.py  binoculars.py  fast_detectgpt.py  mage.py  perplexity_burstiness.py  roberta_openai.py
humanize/references/: prompt-rubric.md  thresholds.md
humanize/rewriter/: prompts.py
humanize/scripts/: __init__.py  io_utils.py  preserve.py  quality.py  run.py  score.py  sentences.py
tests/: test_attacks_more.py  test_browser_check.py  test_ceiling.py  test_cli.py  test_cli_dispatch.py  test_compare.py  test_detectors.py  test_detectors_full.py  test_env.py  test_eval.py  test_features.py  test_llm_judge.py  test_preserve.py  test_prove.py  test_quality.py  test_report.py  test_rewriter.py  test_run.py  test_score.py  test_sentences.py  test_surgical_rewriter.py  test_tells.py  test_verify.py
training/: README.md  __init__.py  digitalocean.md  reward.py  rl_humanizer.py  setup_gpu.sh
untell/: SKILL.md  _env.py  browser_check.py
untell/attacks/: unicode_tricks.py  word_importance.py
untell/detectors/: base.py  fast_detectgpt.py  hc3_roberta.py  llm_judge.py  mage.py  perplexity_burstiness.py  roberta_openai.py
untell/references/: ai-tells.md  prompt-rubric.md
untell/rewriter/: __init__.py  base.py  local_policy.py  prompts.py  surgical.py
untell/scripts/: cli.py  preserve.py  run.py  score.py  sentences.py  tells.py  verify.py
