[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanize-skill"
version = "0.1.0"
description = "Closed-loop, detector-feedback AI-text humanizer packaged as a Claude skill (research prototype + eval harness)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "humanize contributors" }]
keywords = ["ai-detection", "humanizer", "claude-skill", "nlp", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Base install is intentionally zero-dependency: the "lite" tier runs on the
# standard library alone so the skill installs with no model downloads.
dependencies = []

[project.optional-dependencies]
# Real proxy-detector signal on CPU.
full = [
    "torch>=2.0",
    "transformers>=4.40",
    "sentence-transformers>=2.6",
    "spacy>=3.7",
    "sentencepiece>=0.2",
]
# Strongest proxy (Binoculars = 2x Falcon-7B). GPU recommended.
# Includes `full` so torch/transformers are present — Binoculars needs them to run at all.
heavy = [
    "humanize-skill[full]",
    "bitsandbytes>=0.43",
    "accelerate>=0.30",
]
# Benchmark harness datasets (research only).
eval = [
    "datasets>=2.19",
]
# Optional hosted-LLM rewriter providers (headless loop; the skill itself needs neither).
api = [
    "anthropic>=0.40",
    "openai>=1.0",
]
# Commercial AI-detector API clients (the real checkers; each is key-gated at runtime).
commercial = [
    "requests>=2.28",
]
# Browser-driven free-web-UI checking (no API key). Also run: playwright install chromium
browser = [
    "playwright>=1.40",
]
# .docx / .pdf input support
docs = [
    "python-docx>=1.1",
    "pypdf>=4.0",
]
# MCP server (exposes humanize/score/verify as tools to Claude Desktop & other MCP clients)
mcp = [
    "mcp>=1.0",
]
# GPU training moat (RL-against-ensemble / alignment). Run on a GPU box; not used by CI.
train = [
    "trl>=0.12",
    "peft>=0.13",
    "transformers>=4.40",
    "datasets>=2.19",
    "accelerate>=0.30",
]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/ssamba1/humanize"
Repository = "https://github.com/ssamba1/humanize"

[project.scripts]
humanize-score = "humanize.scripts.score:main"
humanize-loop = "humanize.scripts.run:main"
humanize-verify = "humanize.scripts.verify:main"
humanize-prove = "eval.prove:main"
humanize-sentences = "humanize.scripts.sentences:main"
humanize-mcp = "humanize.mcp_server:main"

[tool.setuptools]
packages = [
    "humanize",
    "humanize.scripts",
    "humanize.detectors",
    "humanize.rewriter",
    "humanize.attacks",
    "eval",
    "training",
]

[tool.setuptools.package-data]
humanize = ["SKILL.md", "references/*.md"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
